includes task manager activity

--- a/s2/d1/index.html
+++ b/s2/d1/index.html
@@ -10,7 +10,23 @@
 	<title>DOM MANIPULATION</title>
 </head>
 <body>
+
+	<button onclick="alert('this is inline')">inline</button>
+
+	<button id="internal">internal js</button>
+
+	<button id="btnContent">Change content</button>
+
+	<button id="btnStyle">Change Styling</button>
+
+	<h1 id="headingText" class="head-tag hello">Hello!</h1>
 	
+	<script>
+		// document.getElementById("#internal").onclick = function(){
+
+		// }
+	</script>
+
 	<script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
 </html>
