includes DOM manipulation minicapstone

--- a/s3/d2/index.html
+++ b/s3/d2/index.html
@@ -18,6 +18,16 @@
 	<button class="btn btn-primary"> Button 2 </button>
 	<button class="btn btn-primary"> Button 3 </button>
 	
+	<section>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		
+	</section>
 
 	<script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
